tvo instructie inspectie

--- a/A-Z/Exams/TestVision/22-23/1_Questions+Test_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/1_Questions+Test_22-23.html
@@ -18,8 +18,6 @@
     </div>
 </div>
 
-<!--<h3 style="text-align: center;">TestVision instructions</h3>-->
-
 <div class="grid-row">
 
     <!-- Questions + test -->
@@ -78,7 +76,6 @@
             <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>Test settings</em>  <i class="icon-document"></i></strong></span></p></h3>
             <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T1">Which basic settings are there in a test?</a></span></p>
             <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T2">What if I'd like to use different settings in a test?</a></span></p>
-            <p>&nbsp;</p>
         </div>
     </div>
 </div>
@@ -90,11 +87,13 @@
 
 
 <!-- FAQ Questions 1 -->
-<p>&nbsp;</p>
 <p><a id="FAQ_Q1"></a></p>
-<div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
-  <h4 style="text-align:center"><strong>I'm working with TestVision for the first time. What does the general process look like?</strong></h4>
-  <p style="padding:10px">The ICTO team sets up a copy of last year's exam with copies of last year's questions and test settings – or if this is your first time, we'll set up concept questions and assign basic settings to the exam.
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+  <h4 style="text-align: center; margin-bottom: 35px;"><strong>I'm working with TestVision for the first time. What does the general process look like?</strong></h4>
+  <p style="text-align: center;">
+      The ICTO team sets up a copy of last year's exam with copies of last year's questions and test settings – or if this is your first time, we'll set up concept questions and assign basic settings to the exam.
   <br><br>
   Teachers are solely responsible for modifying the questions in TestVision. Questions can be changed by teachers until the last moment. A request for adding new questions to the test or changing test settings can be sent to ICTO up to one week before the start of the test. After this deadline, teachers can also do these things themselves with the help of a detailed instructions.</p>
   <p>&nbsp;</p>
@@ -102,29 +101,31 @@
 </div>
 
 <!-- FAQ Questions 2 -->
-<p>&nbsp;</p>
 <p><a id="FAQ_Q2"></a></p>
-<div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
-  <h4 style="text-align:center"><strong>How can I edit a question?</strong></h4>
-  <p style="padding:10px">Go to TestVision and login via <i>SURFconext</i>. Click on the menu <i><u>Questions</u></i> and select the right folder of the course on the left. If you don't have access to your course yet, please <a href="https://canvas.uva.nl/courses/8175/pages/contact">contact ICTO</a>.
-  <ul>
-    <li>Double-click the question you'd like to edit. You can write down the question text in the input field beneath 'Stem'. </li>
-    <li>In the menu on the right, you can adjust the question properties: for instance, the number of points, the option to randomize the order in which answer options are shown (MC questions), and the possibility to show a word count (open questions). </li>
-    <li>Beware! If you have open questions, you will always have to fill in grading criteria at the bottom of the page. You can also use multiple criteria (a check-up model) for subsections that make up an essay question. </li>
-  </ul>
-  <br>
-  Don't forget to save your changes by clicking on <i><u>Save</u></i> at the top of the screen.
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+  <h4 style="text-align: center; margin-bottom: 35px;"><strong>How can I edit a question?</strong></h4>
+  <p style="text-align: center;">
+      Go to TestVision and login via <i>SURFconext</i>. Click on the menu <i><u>Questions</u></i> and select the right folder of the course on the left. If you don't have access to your course yet, please <a href="https://canvas.uva.nl/courses/8175/pages/contact">contact ICTO</a>.
+      <br><br>
+      <i class="icon-arrow-right"></i> Double-click the question you'd like to edit. You can write down the question text in the input field beneath 'Stem'. In the menu on the right, you can adjust the question properties: for instance, the number of points, the option to randomize the order in which answer options are shown (MC questions), and the possibility to show a word count (open questions).<br><br>
+      <i class="icon-warning"></i> Beware! If you have open questions, you will always have to fill in grading criteria at the bottom of the page. You can also use multiple criteria (a check-up model) for subsections that make up an essay question.
+      <br><br>
+      Don't forget to save your changes by clicking on <i><u>Save</u></i> at the top of the screen.
   </p>
   <p>&nbsp;</p>
   <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
 </div>
 
 <!-- FAQ Questions 3 -->
-<p>&nbsp;</p>
 <p><a id="FAQ_Q3"></a></p>
-<div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
-  <h4 style="text-align:center"><strong>How can I change the name of a question?</strong></h4>
-  <p style="padding:10px">Go to TestVision and login via <i>SURFconext</i>. Click on the menu <i><u>Questions</u></i> and select the right folder of the course on the left. If you don't have access to your course yet, please <a href="https://canvas.uva.nl/courses/8175/pages/contact">contact ICTO</a>.
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+  <h4 style="text-align: center; margin-bottom: 35px;"><strong>How can I change the name of a question?</strong></h4>
+  <p style="text-align: center;">
+      Go to TestVision and login via <i>SURFconext</i>. Click on the menu <i><u>Questions</u></i> and select the right folder of the course on the left. If you don't have access to your course yet, please <a href="https://canvas.uva.nl/courses/8175/pages/contact">contact ICTO</a>.
   <br><br>
   Go to the question you'd like to rename and right click on it. Select <i><u>Rename</u></i>. You can also select the question and press w on your keyboard.
   <p>&nbsp;</p>
@@ -132,11 +133,13 @@
 </div>
 
 <!-- FAQ Questions 4 -->
-<p>&nbsp;</p>
 <p><a id="FAQ_Q4"></a></p>
-<div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
-  <h4 style="text-align:center"><strong>How can I add a question?</strong></h4>
-  <p style="padding:10px">Go to TestVision and login via <i>SURFconext</i>. Click on the menu <i><u>Questions</u></i> and select the right folder of the course on the left. If you don't have access to your course yet, please <a href="https://canvas.uva.nl/courses/8175/pages/contact">contact ICTO</a>.
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+  <h4 style="text-align: center; margin-bottom: 35px;"><strong>How can I add a question?</strong></h4>
+  <p style="text-align: center;">
+      Go to TestVision and login via <i>SURFconext</i>. Click on the menu <i><u>Questions</u></i> and select the right folder of the course on the left. If you don't have access to your course yet, please <a href="https://canvas.uva.nl/courses/8175/pages/contact">contact ICTO</a>.
   <br><br>
   Select <i><u>+New</u></i> in the top left corner. You can also press n on your keyboard. A new question will open. Choose the type of question you want to create at the top of the screen. On <a href="https://uva.testvision.nl/help/en/html/vraagvormen.html">this page</a>, you can read more about the available question types.
   <p>&nbsp;</p>
@@ -144,42 +147,44 @@
 </div>
 
 <!-- FAQ Questions 5 -->
-<p>&nbsp;</p>
 <p><a id="FAQ_Q5"></a></p>
-<div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
-    <h4 style="text-align:center"><strong>What kind of question types can I use? </strong></h4>
-    <p style="padding:10px">In the settings at the top of each question, you can choose the question type. Generally, multiple choice and open questions are used most often. On the <a href="https://uva.testvision.nl/help/en/html/vraagvormen.html">following page</a>, you can find all other question types that are available.
-    <ul>
-      <li>For more details and information on how to enter <b>MC questions</b>, click <a href="https://uva.testvision.nl/help/en/html/een-een-uit-meervraag_-meer-ui.html">here</a>.</li>
-      <li>For more details and information on how to enter <b>open questions</b>, click <a href="https://uva.testvision.nl/help/en/html/een-open-vraag-bewerken.html">here</a>.</li>
-    </ul>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+    <h4 style="text-align: center; margin-bottom: 35px;"><strong>What kind of question types can I use? </strong></h4>
+    <p style="text-align: center;">
+        In the settings at the top of each question, you can choose the question type. Generally, multiple choice and open questions are used most often. On the <a href="https://uva.testvision.nl/help/en/html/vraagvormen.html">following page</a>, you can find all other question types that are available.
+        <br><br>
+        <i class="icon-info"></i> For more details and information on how to enter <b>MC questions</b>, click <a href="https://uva.testvision.nl/help/en/html/een-een-uit-meervraag_-meer-ui.html">here</a>.<br>
+        <i class="icon-info"></i> For more details and information on how to enter <b>open questions</b>, click <a href="https://uva.testvision.nl/help/en/html/een-open-vraag-bewerken.html">here</a>.
     </p>
     <p>&nbsp;</p>
     <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
 </div>
 
   <!-- FAQ Test 1 -->
-<p>&nbsp;</p>
 <p><a id="FAQ_T1"></a></p>
-<div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
-    <h4 style="text-align:center"><strong>Which basic settings are there in a test?</strong></h4>
-    <p>&nbsp;</p>
-    <p style="text-align: center;"><span style="font-size: 12pt; float: middle;">Some of the instructions are not fully updated yet. Please visit our
-    <a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><em>extensive instructions</em></a>.</span></p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+    <h4 style="text-align: center; margin-bottom: 35px;"><strong>Which basic settings are there in a test?</strong></h4>
+    <p style="text-align: center;">
+      Some of the instructions are not fully updated yet. Please visit our
+    <a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><em>extensive instructions</em></a>.</p>
     <p>&nbsp;</p>
     <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
 </div>
 
   <!-- FAQ Test 2 -->
-  <p>&nbsp;</p>
   <p><a id="FAQ_T2"></a></p>
-  <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
-      <h4 style="text-align:center"><strong>What if I'd like to use different settings in a test?</strong></h4>
-      <p>&nbsp;</p>
-      <p style="text-align: center;"><span style="font-size: 12pt; float: middle;">Some of the instructions are not fully updated yet. Please visit our
-      <a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><em>extensive instructions</em></a>.</span></p>
-      <p>&nbsp;</p>
   <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+      <h4 style="text-align: center; margin-bottom: 35px;"><strong>What if I'd like to use different settings in a test?</strong></h4>
+      <p style="text-align: center;">
+          Some of the instructions are not fully updated yet. Please visit our
+      <a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><em>extensive instructions</em></a>.</p>
+      <p>&nbsp;</p>
   <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
 </div>
 
@@ -195,4 +200,3 @@
  <p>&nbsp;</p>
  <p>&nbsp;</p>
  <p>&nbsp;</p>
- 
