--- a/A-Z/Exams/TestVision/22-23/6_Inspection_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/6_Inspection_22-23.html
@@ -14,9 +14,9 @@ https://canvas.uva.nl/courses/8175/pages/inspection
         <div class="styleguide-section__grid-demo-element">
             <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; text-align: center;">
                 <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175"><i class="icon-home"></i> <span>&nbsp;Home</span> </a>
-                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/a-z" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/a-z" data-api-returntype="Page"><i class="icon-copy-course"></i> <span>&nbsp;A-Z</span> </a>
-                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/enroll/N3HMY8" data-api-returntype="Page">&nbsp;<i class="icon-discussion-new">&nbsp;</i>Enroll</a>
                 <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision"><span style="color: #08a8a2;"><i class="icon-home"></i><strong>&nbsp;TestVision homepage</strong></span></a>
+                <a class="btn Button" style="margin: 5px; background-color:#E5E5E5"><span style="color: #08a8a2;"><i class="icon-student-view"></i><strong>&nbsp;Inspection</strong></span></a>
+                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals" data-api-returntype="Page">&nbsp;<i class="icon-collection">&nbsp;</i>Extensive instructions</a>
             </div>
         </div>
     </div>
@@ -30,24 +30,131 @@ https://canvas.uva.nl/courses/8175/pages/inspection
 <a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><strong><em>extensive instructions</em></strong></a>.</span></p>
 -->
 
-<br>
-<h4><p>Inspection with or without support</p></h4>
-<p>There are roughly two ways to do the inspection: you can have an inspection with technical support at location or without support. The disadvantage of inspection without support is that it reduces the possibility of reusing test questions. Without support, students can easily take a picture, screenshot or copy the test questions via laptop or phone. Printing/downloading the inspection is an exception but can be difficult in large courses with +200 students.</p>
-<br><br>
 
 <div class="grid-row">
+    <!-- rechterzijde -->
+    <div class="col-xs-20 col-md-12">
+        <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #0645ad; border-width: 1.5px; padding: 30px; padding-top: 35px; padding-bottom: 35px; height: auto; background-color: #fafafa;">
 
-    <div class="col-xs-20 col-md-4">
-        <p><strong>Booking inspection (with support)</strong><br />If you book an inspection at ICTO, in this case the inspection is provided with UvA laptops/computers and Assistant Floor Managers are present who technically prepare and support the inspection for you.<br>
-        If you want to do an inspection with support you should notify your programme coordinator way in advance (for more info, view the deadlines <a href="https://canvas.uva.nl/courses/8175/pages/testvision">on this page</a> (subsection: Applying for TestVision).</p>
-        <p><strong>Inspection without technical support</strong><br />ICTO does not request official support; the instructor(s) choose their own day, time, and (optional) location and communicate this to ICTO by email. The inspection works on a "bring your own device" basis. However, the inspection can also be printed out to students by the teacher.</p>
+            <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>FAQ Teachers</em>  <i class="icon-document"></i></strong></span></p></h3>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T1">What's the difference between an inspection with or without technical support?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T2">How do I book an inspection <b>with</b> technical support?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T3">What deadlines should I pay attention to when booking an inspection <b>with</b> technical support?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T31">I missed the deadline for booking an inspection with technical support. What now?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T4">How do I book an inspection <b>without</b> technical support?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T5">How do students log in on TestVision to do the inspection?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T6">I would like to do the inspection offline. How do I print a test for an inspection?</a></span></p>
+            <br>
+            <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>FAQ Students</em>  <i class="icon-document"></i></strong></span></p></h3>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="https://canvas.uva.nl/courses/28129/pages/digital-exams-faq-students" target=_blank>Share this page with students</a></span></p>
+            <br>
+        </div>
     </div>
-
-    <div class="col-xs-20 col-md-8">
-        <p><img src="https://canvas.uva.nl/courses/8175/files/7246297/preview" alt="966365ba-b10d-465e-af99-bd33be8a3b0d.png" /></p>
-    </div>
-
 </div>
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+
+  <!-- FAQ teachers 1 -->
+  <p><a id="FAQ_T1"></a></p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+      <h4 style="text-align: center; margin-bottom: 35px;"><strong>What's the difference between an inspection with or without technical support?</strong></h4>
+      <p style="text-align: center;">There are roughly two ways to do the inspection: you can have an inspection with technical support at location or without support. The disadvantage of an inspection without technical support is that it becomes more difficult to reuse test questions. Without support, students can easily take a picture, screenshot or copy the test questions via laptop or phone. Printing/downloading the inspection is an exception but can be difficult in large courses with more than 200 students.
+      <br><br>
+    In the picture below, all options for booking an inspection are shown: <br><br></p>
+      <p style="text-align:center;"><img src="https://canvas.uva.nl/courses/8175/files/7274551/preview" width="85%" alt="inspection.png" />
+      <br><br><i class="icon-question"></i> <a href="#FAQ_T6">How do I print a test for an inspection?</a>
+      <br><i class="icon-question"></i> <a href="#FAQ_T5">How do students log in on TestVision to do the inspection?</a></p>
+      <p>&nbsp;</p>
+      <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
+  </div>
+
+  <!-- FAQ teachers 2 -->
+  <p><a id="FAQ_T2"></a></p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+      <h4 style="text-align: center; margin-bottom: 35px;"><strong>How do I book an inspection <u>with</u> technical support?</strong></h4>
+      <p style="text-align: center;">If you book an inspection with technical support, a location with UvA laptops or desktops will be provided. Additionally Assistant Floor Managers will be present. They are responsible for preparing and technically supporting the inspection for you.
+        <br><br>If you'd like to do an inspection with support, you need to notify your programme coordinator way in advance. He or she will then also notify ICTO, after which we'll book the technical support for the inspection.
+        <br><br><i class="icon-question"></i> <a href="#FAQ_T3">What deadlines should I pay attention to when booking an inspection with technical support?</a>
+      </p>
+      <p>&nbsp;</p>
+      <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
+  </div>
+
+  <!-- FAQ teachers 3 -->
+  <p><a id="FAQ_T3"></a></p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+      <h4 style="text-align: center; margin-bottom: 35px;"><strong>What deadlines should I pay attention to when booking an inspection <u>with</u> technical support?</strong></h4>
+      <p style="text-align: center;">
+        The deadlines for booking an inspection with support can be found on this <a href="https://canvas.uva.nl/courses/8175/pages/testvision">page</a> (subsection: Applying for TestVision).
+      </p>
+      <p>&nbsp;</p>
+      <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
+  </div>
+
+  <!-- FAQ teachers 3.1 -->
+  <p><a id="FAQ_T31"></a></p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+      <h4 style="text-align: center; margin-bottom: 35px;"><strong>I missed the deadline for booking an inspection with technical support. What now? </strong></h4>
+      <p style="text-align: center;">
+          In case you missed the deadline for booking an inspection with technical support, your only option is to <a href="#FAQ_T4">book an inspection without support</a>. If you you'd like to do the test inspection at <i>very</i> short notice and ICTO cannot arrange for the inspection to be accessible on TestVision, you could always choose to print the inspection.
+          <br><br><i class="icon-question"></i> <a href="#FAQ_T6">How do I print a test for an inspection?</a>
+      </p>
+      <p>&nbsp;</p>
+      <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
+  </div>
+
+  <!-- FAQ teachers 4 -->
+  <p><a id="FAQ_T4"></a></p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+      <h4 style="text-align: center; margin-bottom: 35px;"><strong>How do I book an inspection <u>without</u> technical support?</strong></h4>
+      <p style="text-align: center;">In case of an inspection without support, teachers can choose their own day, time and location (optional),
+        and they should communicate this information with ICTO via email. It does not matter how long or when you'd like the inspection to be. ICTO puts the inspection in an overview and arranges
+        that the inspection is accessible by students at the desired time. Three days before this moment, the teacher will receive an automatic mail with more instruction and information.
+        <br><br>Importantly, location does not matter in case of an inspection without support, as it works on a 'bring your own device' basis. You can do the inspection online or you can choose to sit somewhere with your students. However, it is also possible for teachers to print the test for the inspection.
+
+        <br><br><i class="icon-question"></i> <a href="#FAQ_T6">How do I print a test for an inspection?</a>
+      </p>
+      <p>&nbsp;</p>
+      <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
+  </div>
+
+  <!-- FAQ teachers 5 -->
+  <p><a id="FAQ_T5"></a></p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+      <h4 style="text-align: center; margin-bottom: 35px;"><strong>How do students log in on TestVision to do the inspection?</strong></h4>
+      <p style="text-align: center;">On <a href="https://canvas.uva.nl/courses/28129/pages/digital-exams-faq-students">the following page</a>, an FAQ for students about digital exams can be found. It also states how students can log in on TestVision for the inspection. This page is accessible by students, so you can definitely share it with them.
+      </p>
+      <p>&nbsp;</p>
+      <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
+  </div>
+
+
+  <!-- FAQ teachers 6 -->
+  <p><a id="FAQ_T6"></a></p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+      <h4 style="text-align: center; margin-bottom: 35px;"><strong>I would like to do the inspection offline. How do I print a test for an inspection?</strong></h4>
+      <p style="text-align: center;">If you’d like to do a test inspection on paper, there are two options for printing students’ results. This can be done per student or for the entire group. A guide on how to do so, can be found on <a href="https://amsuni.sharepoint.com/:w:/r/sites/FMG_EDU_Soc_Wet/_layouts/15/Doc.aspx?sourcedoc=%7B8D457955-CF52-458C-9D11-3BD59D1A8B37%7D&file=Instructions%20-%20Test%20inspection%20on%20paper%20(TVO).docx&action=default&mobileredirect=true">the following page</a>.
+      </p>
+      <p>&nbsp;</p>
+      <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
+  </div>
+
 
 
 <p>&nbsp;</p>
