--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -68,12 +68,12 @@
         <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #0645ad; border-width: 1.5px; padding: 30px; padding-top: 35px; padding-bottom: 35px; height: auto; background-color: #fafafa;">
 
             <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>Reviewing the exam</em>  <i class="icon-document"></i></strong></span></p></h3>
-            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ1">Concept question 1</a></span></p>
-            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ2">Concept question 2</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_R1">Concept question 1</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_R2">Concept question 2</a></span></p>
             <br>
             <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>Access scores and grades</em>  <i class="icon-document"></i></strong></span></p></h3>
-            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ1">Concept question 1</a></span></p>
-            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ2">Concept question 2</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_S1">Concept question 1</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_S2">Concept question 2</a></span></p>
             <br>
         </div>
     </div>
@@ -83,32 +83,55 @@
 <p>&nbsp;</p>
 
 
-  <!-- FAQ1 -->
+  <!-- FAQ review 1 -->
+  <p><a id="FAQ_R1"></a></p>
   <p>&nbsp;</p>
-  <p><a id="FAQ1"></a></p>
-  <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
-      <h4 style="text-align:center"><strong>Concept question 1</strong></h4>
-      <p>&nbsp;</p>
-      <p style="text-align: center;"><span style="font-size: 12pt; float: middle;">Some of the instructions are not fully updated yet. Please visit our
-      <a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><em>extensive instructions</em></a>.</span></p>
-      <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+      <h4 style="text-align: center; margin-bottom: 35px;"><strong>Concept question 1 (reviewing)</strong></h4>
+      <p style="text-align: center;">Some of the instructions are not fully updated yet. Please visit our
+      <a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><em>extensive instructions</em></a>.</p>
       <p>&nbsp;</p>
       <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
   </div>
 
-  <!-- FAQ2 -->
+  <!-- FAQ review 2 -->
+  <p><a id="FAQ_R2"></a></p>
   <p>&nbsp;</p>
-  <p><a id="FAQ2"></a></p>
-  <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
-      <h4 style="text-align:center"><strong>Concept question 2</strong></h4>
-      <p>&nbsp;</p>
-      <p style="text-align: center;"><span style="font-size: 12pt; float: middle;">Some of the instructions are not fully updated yet. Please visit our
-      <a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><em>extensive instructions</em></a>.</span></p>
-      <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+      <h4 style="text-align: center; margin-bottom: 35px;"><strong>Concept question 2 (reviewing)</strong></h4>
+      <p style="text-align: center;">Some of the instructions are not fully updated yet. Please visit our
+      <a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><em>extensive instructions</em></a>.</p>
       <p>&nbsp;</p>
       <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
   </div>
-  
+
+  <!-- FAQ scores 1 -->
+  <p><a id="FAQ_S1"></a></p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+      <h4 style="text-align: center; margin-bottom: 35px;"><strong>Concept question 1 (scores & grades)</strong></h4>
+      <p style="text-align: center;">Some of the instructions are not fully updated yet. Please visit our
+      <a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><em>extensive instructions</em></a>.</p>
+      <p>&nbsp;</p>
+      <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
+  </div>
+
+  <!-- FAQ scores 2 -->
+  <p><a id="FAQ_S2"></a></p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
+      <h4 style="text-align: center; margin-bottom: 35px;"><strong>Concept question 2 (scores & grades)</strong></h4>
+      <p style="text-align: center;">Some of the instructions are not fully updated yet. Please visit our
+      <a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><em>extensive instructions</em></a>.</p>
+      <p>&nbsp;</p>
+      <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
+  </div>
+
+
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
